# vega-playground

./: Ising.ipynb  pyproject.toml
.ipynb_checkpoints/: Ising-checkpoint.ipynb  Weather-checkpoint.ipynb
