[tool.poetry]
name = "vega"
version = "0.1.0"
description = ""
authors = ["Zuzanna Surowiec <ts438730@students.mimuw.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"
altair = {extras = ["all"], version = "^5.3.0"}
jupyter = "^1.0.0"
vegafusion = {extras = ["embed"], version = "^1.6.9"}
pylatexenc = "^2.10"
scipy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
